--- a/2016.html
+++ b/2016.html
@@ -14,14 +14,14 @@
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="/assets/css/materialize.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="assets/css/materialize.css" media="screen,projection" />
     <script src="https://use.fonticons.com/1c889437.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="/assets/js/materialize.js"></script>
-    <script src="/assets/js/init.js"></script>
+    <script src="assets/js/materialize.js"></script>
+    <script src="assets/js/init.js"></script>
     <!--Custom CSS-->
-    <link href="/assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!--  Scripts-->
 </head>
@@ -657,7 +657,7 @@
                     </div>
                     <div class="col s6 m4 l3">
                         <div class="card" style="max-width: 300px">
-                            <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="assets/images/about_kevin.jpg"> </div>
+                            <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="assets/images/kevin.jpg"> </div>
                             <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Kevin Sun<i class="material-icons right">close</i></span>
                                 <p>Co-founder: Kevin Sun is an 11th grader at Phillips Academy Andover.</p>
                             </div>
