--- a/gallery.html
+++ b/gallery.html
@@ -1,128 +1,142 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Multiverse by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
+	<head>
+		<title>Gallery | Hack New England High Schools</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!--[if lte IE 8]><script src="gallery-assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="gallery-assets/css/main.css" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="gallery-assets/css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="gallery-assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body>
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-  <meta property="og:image" content="http://hacknehs.com/assets/banner.png" />
-  <meta property="og:description" content="We are running the most exciting hackathon in the New England area for high school students. It will be a day of developing cool ideas, meeting other high school hackers, and learning the ins and outs of development." />
-  <meta property="og:url" content="http://www.hacknehs.com/" />
-  <meta property="og:title" content="hackNEHS | Hack New England High Schools" />
-  <title> hackNEHS | Hack New England High Schools </title>
-  <link rel='shortcut icon' href='assets/favicon.ico' type='image/x-icon' />
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
-  <!--Import Google Icon Font-->
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="/assets/css/materialize.css" media="screen,projection" />
-  <script src="https://use.fonticons.com/1c889437.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="/assets/js/materialize.js"></script>
-  <script src="/assets/js/init.js"></script>
-  <!--Custom CSS-->
-  <link href="/assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
-  <link rel="stylesheet" href="assets/css/font-awesome-4.6.3/css/font-awesome.min.css">
-  <!--  Scripts-->
-</head>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-<body>
-  <!--    <div id="loader"> </div>-->
-  <nav id="navbar" class="navbar-fixed blue-grey-transparent">
-    <nav class="blue-grey-transparent">
-      <div class="nav-wrapper"> <a href="#" data-activates="mobile-demo" class="button-collapse" style="margin-left: 10px"><i class="material-icons">menu</i></a>
-        <ul id="myNavbarLeft" class="left hide-on-small-and-down">
-          <!--                    <li class="light" style="margin-left: 15px"><a href="#home" id="hacknehs-logo-text"><span style="color:#424242"><b class="light">hack</b></span><span style="color:#ff9800"><b class="light">NEHS</b></span></a></li>-->
-          <li class="light">
-            <a href="#"><img src="assets/logo.png" style="height: 40px; vertical-align: middle"></a>
-          </li>
-          <li class="light"><a href="#welcome">Welcome</a></li>
-          <li class="light"><a href="#about">About</a></li>
-          <li class="light"><a href="#participants">Participants</a></li>
-          <li class="light"><a href="#mentors">Mentors</a></li>
-          <li class="light"><a href="#faq">FAQ</a></li>
-          <li class="light"><a href="#sponsors">Sponsors</a></li>
-          <li class="light"><a href="#team">Team</a></li>
-        </ul>
-        <ul id="myNavbarRight" class="right">
-          <li><a class="light" href="mailto:info@hacknehs.com"><i class="fa fa-envelope fa-2x"></i></a></li>
-          <li class="light"><a target="_blank" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official fa-2x"></i></a></li>
-          <li class="light"><a target="_blank" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter fa-2x"></i></a></li>
-          <li class="light"><a target="_blank" href="https://www.instagram.com/hacknehs/"><i class="fa fa-instagram fa-2x"></i></a></li>
-          <li class="light"><a target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-medium  fa-2x" aria-hidden="true"></i></a></li>
-        </ul>
-        <ul class="side-nav" id="mobile-demo">
-          <li class="light center">
-            <a href="#"><img src="assets/logo.png" style="height: 40px; vertical-align: middle"></a>
-          </li>
-          <li class="light"><a href="#welcome">Welcome</a></li>
-          <li class="light"><a href="#about">About</a></li>
-          <li class="light"><a href="#participants">Participants</a></li>
-          <li class="light"><a href="#mentors">Mentors</a></li>
-          <li class="light"><a href="#faq">FAQ</a></li>
-          <li class="light"><a href="#sponsors">Sponsors</a></li>
-          <li class="light"><a href="#team">Team</a></li>
-          <li><a class="light" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> Email</a></li>
-          <li class="light"><a target="_blank" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official"></i> Facebook</a></li>
-          <li class="light"><a target="_blank" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter"></i> Twitter</a></li>
-          <li class="light"><a target="_blank" href="https://www.instagram.com/hacknehs/"><i class="fa fa-instagram"></i> Instagram</a></li>
-          <li class="light"><a target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-medium" aria-hidden="true"></i> Medium</a></li>
-          <li class="light"> </li>
-        </ul>
-      </div>
-    </nav>
-  </nav>
-  <div id="main-content">
-    <script type="text/javascript" src="//www.braincert.com/whiteboard/braincert-wb.js"></script>
-    <script type="text/javascript">
-    bcwb.init({
-      apiKey: 'XLxG0IFHb0nPKhp75hri',
-      height:'1500',
-      width:'1500',
-      bgcolor:'#FFF',
-      logo:'http://www.hacknehs.com/assets/logo.png'
-    });
-    </script>
-    <div id="wbplayer"> </div>
-  </div>
-  <footer id="footer" class="page-footer">
-    <div class="container">
-      <div class="row">
-        <div class="col s12 m6 l4">
-          <h5><i class="mdi-content-send white-text"></i></h5>
-          <h5 class="white-text">Contact Us</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> For Participants: info@hacknehs.com</a></li>
-            <li><a class="grey-text text-lighten-3" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> For Mentors: info@hacknehs.com</a></li>
-            <li><a class="grey-text text-lighten-3" href="mailto:sponsors@hacknehs.com"><i class="fa fa-envelope"></i> For Sponsors: sponsors@hacknehs.com</a></li>
-          </ul>
-        </div>
-        <div class="col s12 m6 l4">
-          <h5><i class="mdi-content-link white-text"></i></h5>
-          <h5 class="white-text">Useful Links</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#participants">Participant Registration</a></li>
-            <li><a class="grey-text text-lighten-3" href="#mentors">Become a hackNEHS Mentor </a></li>
-            <li><a class="grey-text text-lighten-3" href="#sponsors" target="_blank">Sponsor hackNEHS</a></li>
-          </ul>
-        </div>
-        <div class="col s12 m12 l4">
-          <h5><i class="mdi-social-whatshot white-text"></i></h5>
-          <h5 class="white-text">Follow Us</h5>
-          <ul>
-            <li><a target="_blank" class="grey-text text-lighten-3" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official"></i> Facebook</a></li>
-            <li><a target="_blank" class="grey-text text-lighten-3" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter"></i> Twitter</a></li>
-            <li><a target="_blank" class="grey-text text-lighten-3" href="https://www.instagram.com/hacknehs/"><i class="fa fa-instagram"></i> Instagram</a></li>
-            <li><a target="_blank" class="grey-text text-lighten-3" href="https://medium.com/hacknehs"><i class="fa fa-medium" aria-hidden="true"></i> Medium</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container"> © 2016 hackNEHS | Made with <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a> <a href="#home" class="waves-effect waves-light blue-grey right
-        btn-large"><i class="fa fa-chevron-up"></i> To Top</a> </div>
-      </div>
-    </footer>
-  </body>
+				<!-- Header -->
+					<header id="header">
+						<h1><a href="index.html"><strong>hackNEHS</strong> | Hack New England High Schools</a></h1>
+						<nav>
+							<ul>
+								<li><a href="#footer" class="icon fa-info-circle">About</a></li>
+							</ul>
+						</nav>
+					</header>
 
-  </html>
+				<!-- Main -->
+					<div id="main">
+						<article class="thumb">
+							<a href="gallery-assets/images/1.jpg" class="image"><img src="gallery-assets/images/1.jpg" alt="" /></a>
+							</article>
+						<article class="thumb">
+							<a href="gallery-assets/images/2.jpg" class="image"><img src="gallery-assets/images/2.jpg" alt="" /></a>
+							</article>
+						<article class="thumb">
+							<a href="gallery-assets/images/3.jpg" class="image"><img src="gallery-assets/images/3.jpg" alt="" /></a>
+							</article>
+						<article class="thumb">
+							<a href="gallery-assets/images/4.jpg" class="image"><img src="gallery-assets/images/4.jpg" alt="" /></a>
+				</article>
+						<article class="thumb">
+							<a href="gallery-assets/images/5.jpg" class="image"><img src="gallery-assets/images/5.jpg" alt="" /></a>
+						</article>
+						<article class="thumb">
+							<a href="gallery-assets/images/6.jpg" class="image"><img src="gallery-assets/images/6.jpg" alt="" /></a>
+						</article>
+						<article class="thumb">
+							<a href="gallery-assets/images/7.jpg" class="image"><img src="gallery-assets/images/7.jpg" alt="" /></a>
+					</article>
+						<article class="thumb">
+							<a href="gallery-assets/images/8.jpg" class="image"><img src="gallery-assets/images/8.jpg" alt="" /></a>
+						</article>
+						<article class="thumb">
+							<a href="gallery-assets/images/9.jpg" class="image"><img src="gallery-assets/images/9.jpg" alt="" /></a>
+					</article>
+						<article class="thumb">
+							<a href="gallery-assets/images/10.jpg" class="image"><img src="gallery-assets/images/10.jpg" alt="" /></a>
+					</article>
+						<article class="thumb">
+							<a href="gallery-assets/images/11.jpg" class="image"><img src="gallery-assets/images/11.jpg" alt="" /></a>
+						</article>
+						<article class="thumb">
+							<a href="gallery-assets/images/12.jpg" class="image"><img src="gallery-assets/images/12.jpg" alt="" /></a>
+				</article>
+				<article class="thumb">
+					<a href="gallery-assets/images/13.jpg" class="image"><img src="gallery-assets/images/13.jpg" alt="" /></a>
+		</article>
+		<article class="thumb">
+			<a href="gallery-assets/images/14.jpg" class="image"><img src="gallery-assets/images/14.jpg" alt="" /></a>
+</article>
+<article class="thumb">
+	<a href="gallery-assets/images/15.jpg" class="image"><img src="gallery-assets/images/15.jpg" alt="" /></a>
+</article>
+<article class="thumb">
+	<a href="gallery-assets/images/16.jpg" class="image"><img src="gallery-assets/images/16.jpg" alt="" /></a>
+</article>
+<article class="thumb">
+	<a href="gallery-assets/images/17.jpg" class="image"><img src="gallery-assets/images/17.jpg" alt="" /></a>
+</article>
+					</div>
+
+				<!-- Footer -->
+					<footer id="footer" class="panel">
+						<div class="inner split">
+							<div>
+								<section>
+									<h2>Hack New England High Schools Photo Gallery</h2>
+									<p>We are running the most exciting hackathon in the New England area for high school students. It will be a day of developing cool ideas, meeting other high school hackers, and learning the ins and outs of development.</p>
+								</section>
+								<section>
+									<h2>Follow me on ...</h2>
+									<ul class="icons">
+										<li><a href="https://www.facebook.com/hacknehs/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://twitter.com/hackNEHS" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://medium.com/hacknehs" target="_blank" class="icon fa-medium"><span class="label">Twitter</span></a></li>
+										<li><a href="https://hacknehs.com/blog" target="_blank" class="icon fa-rss-square"><span class="label">Twitter</span></a></li>
+									</ul>
+								</section>
+								<p class="copyright">
+									&copy; hackNEHS 2017. Design: <a href="http://html5up.net">HTML5 UP</a>.
+								</p>
+							</div>
+							<div>
+								<section>
+									<h2>Get in touch (Coming Soon)</h2>
+									<form method="post" action="#">
+										<div class="field half first">
+											<input type="text" name="name" id="name" placeholder="Name" />
+										</div>
+										<div class="field half">
+											<input type="text" name="email" id="email" placeholder="Email" />
+										</div>
+										<div class="field">
+											<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
+										</div>
+										<ul class="actions">
+											<li><input type="submit" value="Send" class="special" /></li>
+											<li><input type="reset" value="Reset" /></li>
+										</ul>
+									</form>
+								</section>
+							</div>
+						</div>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="gallery-assets/js/jquery.min.js"></script>
+			<script src="gallery-assets/js/jquery.poptrox.min.js"></script>
+			<script src="gallery-assets/js/skel.min.js"></script>
+			<script src="gallery-assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="gallery-assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="gallery-assets/js/main.js"></script>
+
+	</body>
+</html>
