--- a/index.html
+++ b/index.html
@@ -2,30 +2,51 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <meta property="og:image" content="http://hacknehs.com/assets/images/banner.png" />
-    <meta property="og:description" content="We are running the most exciting hackathon in the New England area for high school students. It will be a day of developing cool ideas, meeting other high school hackers, and learning the ins and outs of development." />
-    <meta property="og:url" content="http://www.hacknehs.com/" />
-    <meta property="og:title" content="hackNEHS | Hack New England High Schools" />
-    <title> hackNEHS | Hack New England High Schools </title>
-    <link rel='shortcut icon' href='assets/images/favicon.ico' type='image/x-icon' />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta property="og:image" content="http://hacknehs.com/assets/images/banner.png" />
+  <meta property="og:description" content="We are running the most exciting hackathon in the New England area for high school students. It will be a day of developing cool ideas, meeting other high school hackers, and learning the ins and outs of development." />
+  <meta property="og:url" content="http://www.hacknehs.com/" />
+  <meta property="og:title" content="hackNEHS | Hack New England High Schools" />
+  <title> hackNEHS | Hack New England High Schools </title>
+  <link rel='shortcut icon' href='assets/images/favicon.ico' type='image/x-icon' />
 
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
-    <!--Import Google Icon Font-->
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
+  <!--Import Google Icon Font-->
 
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Import FontAwesome Font-->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Import FontAwesome Font-->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-    <!--Custom CSS-->
-    <link href="/assets/css/custom.css" type="text/css" rel="stylesheet" media="screen,projection" />
+  <!--Custom CSS-->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="assets/css/custom.css" type="text/css" rel="stylesheet" media="screen,projection" />
 
 </head>
 <body>
-  <div class="intro">
-    Hello
-  </div>
+  <section class="intro">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 text-center">
+          <h1 class="title">hack<span class="text-orange">NEHS</span></h1>
+          <h3 class="text-white">Hack New England High Schools 2017 will run in the Fall of 2017. More information will be available during the summer.</h3>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <a href="gallery.html" class="btn btn-warning btn-lg">Gallery</a>
+            <a href="#" class="btn btn-warning btn-lg">Register</a>
+            <a href="sponsorship.pdf" target="_blank" class="btn btn-warning btn-lg">Sponsor</a>
+          </div>
+          <hr>
+            <div class="btn-group" role="group" aria-label="Basic example">
+          <a class="light btn btn-info" href="mailto:info@hacknehs.com"><i class="fa fa-envelope fa-2x"></i></a>
+          <a class="btn btn-info" target="_blank" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official fa-2x"></i></a>
+          <a class="btn btn-info" target="_blank" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter fa-2x"></i></a>
+          <a class="btn btn-info" target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-medium  fa-2x" aria-hidden="true"></i></a>
+          <a class="btn btn-info" target="_blank" href="https://hacknehs.com/blog"><i class="fa fa-rss-square  fa-2x" aria-hidden="true"></i></a>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
 </body>
 
 </html>
