--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
   <link rel='shortcut icon' href='assets/images/favicon.ico' type='image/x-icon' />
 
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
-  <!--Import Google Icon Font-->
-
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- Import FontAwesome Font-->
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD1xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
   <!--Custom CSS-->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -36,11 +31,11 @@
             <a href="sponsorship.pdf" target="_blank" class="btn btn-warning btn-lg">Sponsor</a>
 
           <hr>
-          <a class="light btn btn-info" href="mailto:info@hacknehs.com"><i class="fa fa-envelope fa-1x"></i></a>
+          <a class="btn btn-info" href="mailto:info@hacknehs.com"><i class="fa fa-envelope fa-1x"></i></a>
           <a class="btn btn-info" target="_blank" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official fa-1x"></i></a>
           <a class="btn btn-info" target="_blank" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter fa-1x"></i></a>
-          <a class="btn btn-info" target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-medium  fa-1x" aria-hidden="true"></i></a>
-          <a class="btn btn-info" target="_blank" href="https://hacknehs.com/blog"><i class="fa fa-rss-square  fa-1x" aria-hidden="true"></i></a>
+          <a class="btn btn-info" target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-medium  fa-1x"></i></a>
+          <a class="btn btn-info" target="_blank" href="https://hacknehs.com/blog"><i class="fa fa-rss-square  fa-1x"></i></a>
 
       </div>
     </div>
