--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
           <h2 class="text-white">Hack New England High Schools 2017 will run in the Fall of 2017. More information will be available during the summer. Last year's site can be viewed <a href="2016.html" target="_blank">here</a>.</h2>
 
           <a href="gallery.html" target="_blank" class="btn btn-warning btn-lg">Gallery</a>
-          <a href="#" class="btn btn-warning btn-lg">Register</a>
+          <a class="typeform-share btn btn-warning btn-lg" href="https://hacknehsinfo.typeform.com/to/zMbqlX" data-mode="1" target="_blank">Register!</a>
+          <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+
+
           <a href="sponsorship.pdf" target="_blank" class="btn btn-warning btn-lg">Sponsor</a>
 
           <hr>
