--- a/index.html
+++ b/index.html
@@ -75,17 +75,18 @@
   <div id="main-content">
     <!-- home -->
     <section id="home" class="scrollspy" style="height: 800px">
-      <div class="row center"> <img id="hacknehs-logo-img" src="assets/images/banner-logo.png" style="margin-top: 120px">
-        <h5 class="light white-text">October 8, 2016</h5>
+      <div class="row center"> <img id="hacknehs-logo-img" src="assets/images/banner-logo.png" style="margin-top: 150px">
+        <h5 class="light white-text" style="margin-top: 30px">October 8, 2016</h5>
         <h5 class="light white-text">Microsoft Sales and Technology Center</h5>
         <h5 class="light white-text">200+ Hackers</h5>
         <br>
         <br>
         <div class="row center">
-          <a href="#participants" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">send</i><b class="light">Register</b></a>
+          <!-- <a href="#participants" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">send</i><b class="light">Register</b></a> -->
           <a href="#mentors" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">perm_identity</i><b class="light">Mentor</b></a>
           <a href="#sponsors" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">thumb_up</i><b class="light">Sponsor</b></a>
           <a href="2017.html" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">star</i><b class="light">2017 Site</b></a>
+          <a href="gallery.html" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">photo</i><b class="light">Gallery</b></a>
         </div>
         <br>
         <br> </div>
@@ -107,15 +108,15 @@
               <div class="col s12 m6 l4">
                 <div class="icon-block">
                   <h2 class="center grey-text text-darken-3"><i class="material-icons">group</i></h2>
-                  <h5 class="center grey-text text-darken-3">All High-Schoolers Are Welcome</h5>
-                  <p><b class="orange-text">No prior experience is necessary</b> to come to hackNEHS, so grab your friends, classmates, and fellow hackers! Coming to a hackathon is a great place for new coders to learn the basics. We will provide <b class="orange-text">workshops</b> for beginners to get hands-on experience with app development, web development, and idea generation from experience mentors. </p>
+                  <h5 class="center grey-text text-darken-3">All Highschoolers Welcome</h5>
+                  <p><b class="orange-text">No prior experience is necessary</b> to come to hackNEHS, so grab your friends, classmates, and fellow hackers! Coming to a hackathon is a great place for new coders to learn the basics. We will provide <b class="orange-text">workshops</b> for beginners to get hands-on experience with app development, web development, and idea generation from experience mentors. We will pass out <b class="orange-text">SWAG and t-shirts</b> to everyone who participates.</p>
                 </div>
               </div>
               <div class="col s12 m12 l4">
                 <div class="icon-block">
                   <h2 class="center grey-text text-darken-3"><i class="material-icons">gamepad</i></h2>
                   <h5 class="center grey-text text-darken-3">Win Fabulous Prizes</h5>
-                  <p>hackNEHS is a competition where teams work together to build amazing software using many tools, APIs, and products. At the end of the event, <b class="orange-text">judges</b> will provide feedback and prizes to the best hacks, which could include <b class="orange-text">cool drones, arduino kits, smart watches, fun Sphero SPRKs, grants to further develop your ideas</b>, and other hot technolgies of the modern era. However, everyone is a winner, and we will pass out <b class="orange-text">SWAG and t-shirts</b> to everyone who participates.</p>
+                  <p>hackNEHS is a competition where teams work together to build amazing software using many tools, APIs, and products. At the end of the event, <b class="orange-text">judges</b> will provide feedback and prizes to the best hacks, which could include <b class="orange-text">cool drones, arduino kits, smart watches, fun Sphero SPRKs, grants to further develop your ideas</b>, and other hot technolgies of the modern era.</p>
                 </div>
               </div>
             </div>
