--- a/index.html
+++ b/index.html
@@ -33,41 +33,39 @@
       <div class="nav-wrapper"> <a href="#" data-activates="mobile-demo" class="button-collapse" style="margin-left: 10px"><i class="material-icons">menu</i></a>
         <ul id="myNavbarLeft" class="left hide-on-small-and-down">
           <!--                    <li class="light" style="margin-left: 15px"><a href="#home" id="hacknehs-logo-text"><span style="color:#424242"><b class="light">hack</b></span><span style="color:#ff9800"><b class="light">NEHS</b></span></a></li>-->
-          <li class="light">
+          <li class="">
             <a href="#"><img src="assets/images/logo.png" style="height: 40px; vertical-align: middle"></a>
           </li>
-          <li class="light"><a href="#welcome">Welcome</a></li>
-          <li class="light"><a href="#about">About</a></li>
-          <li class="light"><a href="#participants">Participants</a></li>
-          <li class="light"><a href="#mentors">Mentors</a></li>
-          <li class="light"><a href="#faq">FAQ</a></li>
-          <li class="light"><a href="#sponsors">Sponsors</a></li>
-          <li class="light"><a href="#team">Team</a></li>
+          <li class=""><a href="#welcome">Welcome</a></li>
+          <li class=""><a href="#about">About</a></li>
+          <li class=""><a href="#participants">Participants</a></li>
+          <li class=""><a href="#mentors">Mentors</a></li>
+          <li class=""><a href="#faq">FAQ</a></li>
+          <li class=""><a href="#sponsors">Sponsors</a></li>
+          <li class=""><a href="#team">Team</a></li>
         </ul>
         <ul id="myNavbarRight" class="right">
-          <li><a class="light" href="mailto:info@hacknehs.com"><i class="fa fa-envelope fa-2x"></i></a></li>
-          <li class="light"><a target="_blank" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official fa-2x"></i></a></li>
-          <li class="light"><a target="_blank" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter fa-2x"></i></a></li>
-          <li class="light"><a target="_blank" href="https://www.instagram.com/hacknehs/"><i class="fa fa-instagram fa-2x"></i></a></li>
-          <li class="light"><a target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-medium  fa-2x" aria-hidden="true"></i></a></li>
+          <li><a class="" href="mailto:info@hacknehs.com"><i class="fa fa-envelope fa-2x"></i></a></li>
+          <li class=""><a target="_blank" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official fa-2x"></i></a></li>
+          <li class=""><a target="_blank" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter fa-2x"></i></a></li>
+          <li class=""><a target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-medium  fa-2x" aria-hidden="true"></i></a></li>
         </ul>
         <ul class="side-nav" id="mobile-demo">
-          <li class="light center">
+          <li class=" center">
             <a href="#"><img src="assets/images/logo.png" style="height: 40px; vertical-align: middle"></a>
           </li>
-          <li class="light"><a href="#welcome">Welcome</a></li>
-          <li class="light"><a href="#about">About</a></li>
-          <li class="light"><a href="#participants">Participants</a></li>
-          <li class="light"><a href="#mentors">Mentors</a></li>
-          <li class="light"><a href="#faq">FAQ</a></li>
-          <li class="light"><a href="#sponsors">Sponsors</a></li>
-          <li class="light"><a href="#team">Team</a></li>
-          <li><a class="light" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> Email</a></li>
-          <li class="light"><a target="_blank" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official"></i> Facebook</a></li>
-          <li class="light"><a target="_blank" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter"></i> Twitter</a></li>
-          <li class="light"><a target="_blank" href="https://www.instagram.com/hacknehs/"><i class="fa fa-instagram"></i> Instagram</a></li>
-          <li class="light"><a target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-medium" aria-hidden="true"></i> Medium</a></li>
-          <li class="light"> </li>
+          <li class=""><a href="#welcome">Welcome</a></li>
+          <li class=""><a href="#about">About</a></li>
+          <li class=""><a href="#participants">Participants</a></li>
+          <li class=""><a href="#mentors">Mentors</a></li>
+          <li class=""><a href="#faq">FAQ</a></li>
+          <li class=""><a href="#sponsors">Sponsors</a></li>
+          <li class=""><a href="#team">Team</a></li>
+          <li><a class="" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> Email</a></li>
+          <li class=""><a target="_blank" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official"></i> Facebook</a></li>
+          <li class=""><a target="_blank" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter"></i> Twitter</a></li>
+          <li class=""><a target="_blank" href="https://medium.com/hacknehs"><i class="fa fa-medium" aria-hidden="true"></i> Medium</a></li>
+          <li class=""> </li>
         </ul>
       </div>
     </nav>
@@ -86,7 +84,7 @@
           <a href="#mentors" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">perm_identity</i><b class="light">Mentor</b></a>
           <a href="#sponsors" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">thumb_up</i><b class="light">Sponsor</b></a>
           <a href="2017.html" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">star</i><b class="light">2017 Site</b></a>
-          <a href="gallery.html" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">photo</i><b class="light">Gallery</b></a>
+          <a href="https://www.facebook.com/media/set/?set=a.1840865556148214.1073741829.1796828967218540&type=1&l=949d2b3641" target="_blank" class="waves-effect waves-light blue-grey btn-large"><i class="material-icons left">photo</i><b class="light">Gallery</b></a>
         </div>
         <br>
         <br> </div>
@@ -156,7 +154,7 @@
                 </div>
                 <div class="row center">
                   <div class="col s12">
-                    <h3 class="white-text light" style="margin-top: 50px">hackNEHS In The News</h3>
+                    <h4 class="white-text light" style="margin-top: 50px">In The News</h4>
                     <div class="card-panel grey lighten-5 z-depth-1" style="margin-top: 50px">
                       <div class="row">
                         <div class="col m6 s12 text-center">
