started working on 2017

--- a/2017.html
+++ b/2017.html
@@ -41,10 +41,12 @@
             <span id="typed"></span>
           </div>
 
-          <h2 class="text-white">Hack New England High Schools 2017 will run in the Fall of 2017. More information will be available during the summer. Last year's site can be viewed <a href="index.html" target="_blank">here</a>.</h2>
-
+          <h2 class="text-white">October 8, 2017</h2>
+            <h2 class="text-white">Microsoft Sales and Technology Center</h2>
+              <h2 class="text-white">200+ Hackers</h2>
+  <div class="intro-btn">
           <a href="gallery.html" target="_blank" class="btn btn-warning btn-lg">Gallery</a>
-          <a class="typeform-share btn btn-warning btn-lg" href="https://hacknehsinfo.typeform.com/to/zMbqlX" data-mode="1" target="_blank">Register!</a>
+          <a class="typeform-share btn btn-warning btn-lg" href="https://hacknehsinfo.typeform.com/to/zMbqlX" data-mode="1" target="_blank">Register</a>
           <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 
 
@@ -59,7 +61,8 @@
           <br>
           <br>
           <br>
-          <a href="#news"><i class="fa fa-arrow-down fa-3x"></i></a>
+          <a href="#news"><i class="fa fa-arrow-down fa-2x"></i></a>
+        </div>
         </div>
       </div>
     </div>
