--- a/index.html
+++ b/index.html
@@ -265,6 +265,61 @@
         <div class="col-xs-12">
           <h2 class="text-orange text-center">Team</h2>
           <hr>
+
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <img src="assets/images/andrew.jpg" alt="Andrew" style="max-width: 100%">
+            <div class="container">
+              <h4><b>Andrew Wang</b></h4>
+              <p>Co-founder/Director</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <img src="assets/images/kevin.jpg" alt="Kevin" style="max-width: 100%">
+            <div class="container">
+              <h4><b>Kevin Sun</b></h4>
+              <p>Co-founder/Director</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <img src="assets/images/vinjai.jpg" alt="Vinjai" style="max-width: 100%">
+            <div class="container">
+              <h4><b>Vinjai Vale</b></h4>
+              <p>Co-founder/Director</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <img src="assets/images/jocelyn.jpg" alt="Jocelyn" style="max-width: 100%">
+            <div class="container">
+              <h4><b>Jocelyn Shen</b></h4>
+              <p>Marketing Director</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <img src="assets/images/amanda.png" alt="Amanda" style="max-width: 100%; max-height: 100%;">
+            <div class="container">
+              <h4><b>Amanda Li</b></h4>
+              <p>Outreach Director</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <img src="assets/images/varun.jpg" alt="Varun" style="max-width: 100%; max-height: 100%;">
+            <div class="container">
+              <h4><b>Varun Roy</b></h4>
+              <p>Hardware Guru</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
