--- a/index.html
+++ b/index.html
@@ -332,6 +332,15 @@
             </div>
           </div>
         </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <img src="assets/images/jeffrey.jpg" alt="Jeffrey" style="max-width: 100%; max-height: 100%;">
+            <div class="container">
+              <h4><b>Jeffrey Shen</b></h4>
+              <p>Hacker Experience</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
