--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <span id="typed"></span>
           </div>
 
-          <h2 class="text-white">October 8, 2017</h2>
+          <h2 class="text-white">Saturday, October 7, 2017</h2>
           <h2 class="text-white">Microsoft Sales and Technology Center</h2>
           <h2 class="text-white">200+ Hackers</h2>
           <div class="intro-btn">
@@ -78,7 +78,7 @@
     <div class="section-container orange-container">
       <div class="row">
         <div class="col-xs-12 text-center">
-          <h2 class="text-white">hackNEHS In The News</h2>
+          <h2 class="text-white">Check out <a href="2016.html" target="_blank">hackNEHS 2016!</a></h2>
           <hr>
           <a href="gallery.html" target="_blank" class="btn btn-info btn-lg" style="margin-bottom: 2em">Photo Gallery</a>
         </div>
@@ -256,6 +256,105 @@
           <hr>
         </div>
       </div>
+      <div class="row ">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">What is a hackathon?</span>
+              <p>A hackathon is an event where like-minded computer enthusiasts meet to work together on computer programming. Teams collaborate to build and code something original from websites and apps to machines and robots. Hackathons foster an environment for self-expression through technology.</p>
+            </div>
+            <div class=""> <a class="" href="https://medium.com/hackathons-anonymous/wtf-is-a-hackathon-92668579601#.6zlifehqc" target="_blank"><i class="fa fa-paperclip"></i> More information about hackathons</a> </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">What are workshops?</span>
+              <p>Workshops will be small, interactive classes teaching novices how brainstorm innovative ideas and code their ideas. Experienced mentors will run these class sessions throughout the hackathon. They will give participants the basic tools necessary to build something cool in the hackathon. Workshops will be offered on various tools, including Ideation by MIT Launch, web development, and JavaScript.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row ">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">What should I bring?</span>
+              <p>You only need to bring your computer, a charger, a valid government-issued or school ID, and your signed liabilty form. Attendance is completely free, and food, drinks, power strips, and wi-fi will be provided!</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">How does scoring work?</span>
+              <p>One hack or project are to be submitted by each team to qualify for demos and prizes. Experienced judges will critique each submission based on functionability, creativity, and technical difficulty.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row ">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">How do teams work?</span>
+              <p>A team usually consists of 4 - 5 people who collaborate on a project for the entire event. You can come with a team, or make one with new friends you meet at hackNEHS during registration!</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">Will there be food?</span>
+              <p>Yes, food will be provided. We will have delicious pizza for lunch, and Chipotle for dinner. Let us know of you have any allergies or dietary preferences!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row ">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">How will I get there?</span>
+              <p>Find some friends to drive or carpool with! Our <a href="https://goo.gl/maps/NBaCEdnb5232" target="_blank"> venue </a> is conveniently right off the highway, next to big malls such as Burlington mall.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">What is the cost?</span>
+              <p>It’s completely free! Thanks to our generous sponsors, you will be able to attend hackNEHS with no charge whatsoever.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row ">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">Can I be a mentor?</span>
+              <p>Of course! Contact us at our email below.</p>
+            </div>
+            <div class=""> <a class="" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> info@hacknehs.com</a> </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">I can't code?</span>
+              <p>Whether you're an experienced hacker or you've never written a line of code before, you are welcome at hackNEHS. Going to a hackathon like hackNEHS is a fantastic way to learn coding through morning workshops.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row ">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">Who can attend?</span>
+              <p>hackNEHS is open to all high schoolers. If you’re in middle school, shoot us an email at our email below.</p>
+            </div>
+            <div class=""> <a class="" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> info@hacknehs.com</a> </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="card">
+            <div class="card-content white-text"> <span class="card-title text-orange">I don't have a team?</span>
+              <p>Don’t worry. You will have an opportunity to find a team on the day of the hackathon. The first hour is dedicated towards registration, networking, and team formation. Or, you can even choose to work solo!</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -310,7 +409,7 @@
             <img src="assets/images/jocelyn.jpg" alt="Jocelyn" style="max-width: 100%">
             <div class="container">
               <h4><b>Jocelyn Shen</b></h4>
-              <p>Marketing Director</p>
+              <p>Marketing</p>
             </div>
           </div>
         </div>
@@ -319,7 +418,7 @@
             <img src="assets/images/amanda.png" alt="Amanda" style="max-width: 100%; max-height: 100%;">
             <div class="container">
               <h4><b>Amanda Li</b></h4>
-              <p>Outreach Director</p>
+              <p>Outreach</p>
             </div>
           </div>
         </div>
@@ -338,6 +437,15 @@
             <div class="container">
               <h4><b>Jeffrey Shen</b></h4>
               <p>Hacker Experience</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <img src="assets/images/isabella.jpg" alt="Isabella" style="max-width: 100%; max-height: 100%;">
+            <div class="container">
+              <h4><b>Isabella Morona</b></h4>
+              <p>Logistics</p>
             </div>
           </div>
         </div>
