--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
             <a href="sponsorship.pdf" target="_blank" class="btn btn-warning">Sponsor</a>
             <hr>
-            <a href="#news"><i class="fa fa-arrow-down fa-3x"></i></a>
+            <a href="#news" class="btn btn-warning btn-sm"><i class="fa fa-arrow-down fa-2x"></i></a>
           </div>
         </div>
       </div>
@@ -78,9 +78,10 @@
     <div class="section-container orange-container">
       <div class="row">
         <div class="col-xs-12 text-center">
-          <h2 class="text-white">Check out <a href="2016.html" target="_blank">hackNEHS 2016!</a></h2>
+          <h2 class="text-white">hackNEHS News</h2>
           <hr>
           <a href="gallery.html" target="_blank" class="btn btn-info btn-lg" style="margin-bottom: 2em">Photo Gallery</a>
+          <a href="2016.html" target="_blank" class="btn btn-info btn-lg" style="margin-bottom: 2em">hackNEHS 2016</a>
         </div>
       </div>
       <div class="row" style="margin-bottom: 3em">
@@ -459,16 +460,16 @@
         <div class="col-xs-12 col-md-6 col-lg-4">
           <h5><i class="fa fa-bookmark-o text-white fa-2x"></i></h5>
           <h4 class="text-white">Contact Us</h4>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> Participants: info@hacknehs.com</a></li>
-            <li><a class="grey-text text-lighten-3" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> Mentors: info@hacknehs.com</a></li>
-            <li><a class="grey-text text-lighten-3" href="mailto:sponsors@hacknehs.com"><i class="fa fa-envelope"></i> Sponsors: sponsors@hacknehs.com</a></li>
+          <ul class="text-orange">
+            <li><a class="" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> Participants: info@hacknehs.com</a></li>
+            <li><a class="" href="mailto:info@hacknehs.com"><i class="fa fa-envelope"></i> Mentors: info@hacknehs.com</a></li>
+            <li><a class="" href="mailto:sponsors@hacknehs.com"><i class="fa fa-envelope"></i> Sponsors: sponsors@hacknehs.com</a></li>
           </ul>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-4">
           <h5><i class="fa fa-link text-white fa-2x"></i></h5>
           <h4 class="text-white">Useful Links</h4>
-          <ul>
+          <ul class="text-orange">
             <li><a class="" href="#">Participant Registration</a></li>
             <li><a class="" href="#">Become a Mentor </a></li>
             <li><a class="" href="#">Sponsor hackNEHS</a></li>
@@ -477,16 +478,16 @@
         <div class="col-xs-12 col-md-12 col-lg-4">
           <h5><i class="fa fa-thumbs-o-up text-white fa-2x"></i></h5>
           <h4 class="text-white">Follow Us</h4>
-          <ul>
-            <li><a target="_blank" class="grey-text text-lighten-3" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official"></i> Facebook</a></li>
-            <li><a target="_blank" class="grey-text text-lighten-3" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter"></i> Twitter</a></li>
-            <li><a target="_blank" class="grey-text text-lighten-3" href="https://www.instagram.com/hacknehs/"><i class="fa fa-instagram"></i> Instagram</a></li>
-            <li><a target="_blank" class="grey-text text-lighten-3" href="https://medium.com/hacknehs"><i class="fa fa-medium" aria-hidden="true"></i> Medium</a></li>
+          <ul class="text-orange">
+            <li><a target="_blank" class="" href="https://www.facebook.com/hacknehs/"><i class="fa fa-facebook-official"></i> Facebook</a></li>
+            <li><a target="_blank" class="" href="https://twitter.com/hackNEHS"><i class="fa fa-twitter"></i> Twitter</a></li>
+            <li><a target="_blank" class="" href="https://www.instagram.com/hacknehs/"><i class="fa fa-instagram"></i> Instagram</a></li>
+            <li><a target="_blank" class="" href="https://medium.com/hacknehs"><i class="fa fa-medium" aria-hidden="true"></i> Medium</a></li>
           </ul>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12 text-center">
+        <div class="col-xs-12 text-center text-white">
           © 2017 hackNEHS
         </div>
       </div>
