--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
           <h2 class="text-white">200+ Hackers</h2>
           <div class="intro-btn">
 
-            <a class="typeform-share btn btn-warning" href="https://hacknehsinfo.typeform.com/to/f1u6Qx" data-mode="1" target="_blank">Mentor</a>
+            <a class="btn btn-warning" href="mentor.pdf" target="_blank">Mentor</a>
             <a class="typeform-share btn btn-warning btn-lg" href="https://hacknehsinfo.typeform.com/to/zMbqlX" data-mode="1" target="_blank">Register</a>
-            <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+
             <a href="sponsorship.pdf" target="_blank" class="btn btn-warning">Sponsor</a>
             <hr>
             <a href="#news" class="btn btn-warning btn-sm"><i class="fa fa-arrow-down fa-2x"></i></a>
@@ -241,9 +241,11 @@
   <section class="guests" id="guests">
     <div class="section-container">
       <div class="row">
-        <div class="col-xs-12">
-          <h2 class="text-orange text-center">Guests</h2>
+        <div class="col-xs-12 text-center">
+          <h2 class="text-orange">Guests</h2>
           <hr>
+          <a href="mentor.pdf" target="_blank" class="btn btn-warning btn-lg" style="margin-bottom: 2em">More Info</a>
+          <a class="typeform-share btn btn-warning btn-lg" href="https://hacknehsinfo.typeform.com/to/f1u6Qx" data-mode="1" target="_blank" style="margin-bottom: 2em">Register as Mentor</a>
         </div>
       </div>
     </div>
@@ -362,9 +364,10 @@
   <section class="sponsors" id="sponsors">
     <div class="section-container">
       <div class="row">
-        <div class="col-xs-12">
-          <h2 class="text-orange text-center">Sponsors</h2>
+        <div class="col-xs-12 text-center">
+          <h2 class="text-orange">Sponsors</h2>
           <hr>
+          <a href="sponsorship.pdf" target="_blank" class="btn btn-warning btn-lg" style="margin-bottom: 2em">Become a Sponsor</a>
         </div>
       </div>
     </div>
@@ -470,9 +473,9 @@
           <h5><i class="fa fa-link text-white fa-2x"></i></h5>
           <h4 class="text-white">Useful Links</h4>
           <ul class="text-orange">
-            <li><a class="" href="#">Participant Registration</a></li>
-            <li><a class="" href="#">Become a Mentor </a></li>
-            <li><a class="" href="#">Sponsor hackNEHS</a></li>
+            <li><a class="typeform-share" href="https://hacknehsinfo.typeform.com/to/zMbqlX" data-mode="1" target="_blank">Participant Registration</a></li>
+            <li><a class="typeform-share" href="https://hacknehsinfo.typeform.com/to/f1u6Qx" data-mode="1" target="_blank">Become a Mentor </a></li>
+            <li><a class="" href="sponsorship.pdf" target="_blank">Sponsor hackNEHS</a></li>
           </ul>
         </div>
         <div class="col-xs-12 col-md-12 col-lg-4">
@@ -493,6 +496,7 @@
       </div>
     </div>
   </footer>
+  <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 </body>
 
 <script src="assets/js/jquery.min.js"></script>
