--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="#" class="navbar-brand"><img src="assets/images/logo.png" style="height: 40px; margin-top: 0;"></a>
+      <a href="#" class="navbar-brand"><img src="assets/images/logo2.png" style="height: 40px; margin-top: 0; background: rgba(255,173,51,0.75); padding: 3px 5px 3px 5px; border-radius: 3%"></a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-left">
@@ -368,6 +368,7 @@
           <h2 class="text-orange">Sponsors</h2>
           <hr>
           <a href="sponsorship.pdf" target="_blank" class="btn btn-warning btn-lg" style="margin-bottom: 2em">Become a Sponsor</a>
+          <a href="2016.html#sponsors" target="_blank" class="btn btn-warning btn-lg" style="margin-bottom: 2em">2016 Sponsors</a>
         </div>
       </div>
     </div>
