--- a/index.html
+++ b/index.html
@@ -454,6 +454,15 @@
             </div>
           </div>
         </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <img src="assets/images/lauren.jpg" alt="Lauren" style="max-width: 100%; max-height: 100%;">
+            <div class="container">
+              <h4><b>Lauren Lee</b></h4>
+              <p>Sponsorship</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
