--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="#" class="navbar-brand"><img src="assets/images/logo2.png" style="height: 40px; margin-top: 0; background: rgba(255,173,51,0.75); padding: 3px 5px 3px 5px; border-radius: 3%"></a>
+      <a href="#" class="navbar-brand"><img src="assets/images/logo.png" style="height: 40px; margin-top: 0;"></a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-left">
@@ -56,18 +56,17 @@
             </div>
             <span id="typed"></span>
           </div>
-
           <h2 class="text-white">Saturday, October 7, 2017</h2>
           <h2 class="text-white">Microsoft Sales and Technology Center</h2>
           <h2 class="text-white">200+ Hackers</h2>
           <div class="intro-btn">
 
-            <a class="btn btn-warning" href="mentor.pdf" target="_blank">Mentor</a>
-            <a class="typeform-share btn btn-warning btn-lg" href="https://hacknehsinfo.typeform.com/to/zMbqlX" data-mode="1" target="_blank">Register</a>
+            <a class="btn btn-warning" href="mentor.pdf" target="_blank">Mentor<br><i class="fa fa-user fa-1x"></i></a>
+            <a class="typeform-share btn btn-warning btn-lg" href="https://hacknehsinfo.typeform.com/to/zMbqlX" data-mode="1" target="_blank">Register<br><i class="fa fa-paper-plane fa-1x"></i></a>
 
-            <a href="sponsorship.pdf" target="_blank" class="btn btn-warning">Sponsor</a>
+            <a href="sponsorship.pdf" target="_blank" class="btn btn-warning">Sponsor<br><i class="fa fa-thumbs-up fa-1x"></i></a>
             <hr>
-            <a href="#news" class="btn btn-warning btn-sm"><i class="fa fa-arrow-down fa-2x"></i></a>
+            <a href="#news" class="btn btn-warning"><img src="assets/images/logo2.png" style="height: 25px; margin-top: 0;"><br><i class="fa fa-arrow-down fa-1x"></i> </a>
           </div>
         </div>
       </div>
@@ -501,7 +500,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 text-center text-white">
-          © 2017 hackNEHS
+          © 2017 <img src="assets/images/logo2.png" style="height: 30px; margin-top: 0; background: rgba(255, 255, 255, 0.8); padding: 5px; margin-left: 5px; border-radius: 10%;">
         </div>
       </div>
     </div>
