--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <a href="sponsorship.pdf" target="_blank" class="btn btn-warning">Sponsor<br><i class="fa fa-thumbs-up fa-1x"></i></a>
             <hr>
-            <a href="#news" class="btn btn-warning"><img src="assets/images/logo2.png" style="height: 25px; margin-top: 0;"><br><i class="fa fa-arrow-down fa-1x"></i> </a>
+            <a href="#news" class="btn btn-warning" style="color: #555"><img src="assets/images/logo2.png" style="height: 25px; margin-top: 0; padding: 2px"><br><i class="fa fa-arrow-down fa-1x"></i> </a>
           </div>
         </div>
       </div>
