--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   <!--Custom CSS-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="assets/css/custom.css" rel="stylesheet" />
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-104419015-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
   <nav class="navbar navbar-default navbar-fixed-top" id="nav">
