--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="assets/css/custom.css" rel="stylesheet" />
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-104419015-1', 'auto');
-    ga('send', 'pageview');
+  ga('create', 'UA-104419015-1', 'auto');
+  ga('send', 'pageview');
 
   </script>
 </head>
@@ -54,6 +54,9 @@
       </ul>
     </div><!--/.nav-collapse -->
   </nav>
+  <a class="typeform-share btn btn-info btn-lg fab-btn-1" data-toggle="popover" data-placement="left" data-content="Mentor" data-trigger="hover" href="https://hacknehsinfo.typeform.com/to/f1u6Qx" data-mode="1" target="_blank"><i class="fa fa-group fa-1x"></i></a>
+  <a class="typeform-share btn btn-info btn-lg fab-btn-2" data-toggle="popover" data-placement="left" data-content="Register" data-trigger="hover" href="https://hacknehsinfo.typeform.com/to/zMbqlX" data-mode="1" target="_blank"><i class="fa fa-paper-plane fa-1x"></i></a>
+  <a class="btn btn-info btn-lg fab-btn-3" data-toggle="popover" data-placement="left" data-content="Sponsor" data-trigger="hover" href="sponsorship.pdf" target="_blank"><i class="fa fa-thumbs-up fa-1x"></i></a>
   <section class="intro">
     <div class="section-container">
       <div class="row">
@@ -71,7 +74,7 @@
           <h2 class="text-white">200+ Hackers</h2>
           <div class="intro-btn">
 
-            <a class="btn btn-warning" href="mentor.pdf" target="_blank">Mentor<br><i class="fa fa-user fa-1x"></i></a>
+            <a class="btn btn-warning" href="mentor.pdf" target="_blank">Mentor<br><i class="fa fa-group fa-1x"></i></a>
             <a class="typeform-share btn btn-warning btn-lg" href="https://hacknehsinfo.typeform.com/to/zMbqlX" data-mode="1" target="_blank">Register<br><i class="fa fa-paper-plane fa-1x"></i></a>
 
             <a href="sponsorship.pdf" target="_blank" class="btn btn-warning">Sponsor<br><i class="fa fa-thumbs-up fa-1x"></i></a>
@@ -380,6 +383,34 @@
           <a href="2016.html#sponsors" target="_blank" class="btn btn-warning btn-lg" style="margin-bottom: 2em">2016 Sponsors</a>
         </div>
       </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-8">
+          <div class="card">
+            <a href="https://www.mathworks.com/" target="_blank"><img src="assets/images/mathworks.png" alt="MathWorks" style="max-width: 100%"></a>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="card">
+            <a href="https://www.deshaw.com/" target="_blank"><img src="assets/images/deshaw.jpg" alt="DE Shaw" style="max-width: 100%"></a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 text-center">
+          <h2 class="text-orange">Partners</h2>
+          <hr>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <a href="https://www.microsoft.com/en-us/" target="_blank"><img src="assets/images/microsoft.png" alt="Microsoft" style="max-width: 100%"></a>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card">
+            <a href="https://www.oreilly.com/" target="_blank"><img src="assets/images/oreilly.png" alt="O'Reilly" style="max-width: 100%"></a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -534,6 +565,11 @@ $(function(){
 </script>
 
 <script>
+
+$(function () {
+  $('[data-toggle="popover"]').popover()
+});
+
 $(document).ready(function() {
   // Transition effect for navbar
   $(window).scroll(function() {
