--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta property="og:image" content="http://hacknehs.com/assets/images/banner.png" />
-  <meta property="og:description" content="We are running the most exciting hackathon in the New England area for high school students. It will be a day of developing cool ideas, meeting other high school hackers, and learning the ins and outs of development." />
+  <meta property="og:description" content="The most exciting hackathon in New England for highschool students. Develop cool ideas, meet other hackers, and learning the ins and outs of development." />
   <meta property="og:url" content="http://www.hacknehs.com/" />
   <meta property="og:title" content="hackNEHS | Hack New England High Schools" />
   <title> hackNEHS | Hack New England High Schools </title>
@@ -189,7 +189,7 @@
               </div>
               <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                 <div class="panel-body">
-                  October 8, 2017 - 8:00 AM to 8:30 PM
+                  October 7, 2017 - 8:00 AM to 8:30 PM
                 </div>
               </div>
             </div>
@@ -283,7 +283,7 @@
         <div class="col-sm-12 col-md-6 col-lg-6">
           <div class="card">
             <div class="card-content white-text"> <span class="card-title text-orange">What are workshops?</span>
-              <p>Workshops will be small, interactive classes teaching novices how brainstorm innovative ideas and code their ideas. Experienced mentors will run these class sessions throughout the hackathon. They will give participants the basic tools necessary to build something cool in the hackathon. Workshops will be offered on various tools, including Ideation by MIT Launch, web development, and JavaScript.</p>
+              <p>Workshops will be small, interactive classes teaching novices how brainstorm innovative ideas and code their ideas. Experienced mentors will run these class sessions throughout the hackathon. They will give participants the basic tools necessary to build something cool in the hackathon. Workshops will be offered on various tools, including Ideation, web development, and JavaScript.</p>
             </div>
           </div>
         </div>
